# mangetamain

./: .dockerignore  .gitattributes  .gitignore  CI_CD_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.streamlit  Makefile  QUICKSTART_CICD.md  QUICK_START.md  README.md  SETUP_GUIDE.md  app.py  cooking_app.py  dev.py  docker-compose.yml  main_nutrition_tagging.py  main_sentiment_analysis.py  main_time_prediction.py  pyproject.toml  requirements.txt  run_clustering_models.py  setup.sh  streamlit_app_final.py  test_memory_optimization.py  train_sentiment_model.py
.devcontainer/: devcontainer.json
.github/: README.md
.github/workflows/: ci.yml  docker.yml  full-pipeline.yml  ml-pipeline.yml
config/: __init__.py  config.py
data/processed/: .gitkeep  interactions_clean.csv  processed_recipes.csv  recipes_clean.csv  recipes_clustered_v3.csv  recipes_features_v3.csv  recipes_nutrition_features.csv
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_clustering_kmeans.ipynb
outputs/models/: nutrition_classifier_20251029_190820_evaluation.json  nutrition_classifier_20251029_190820_metadata.json  nutrition_low_fat_logistic.pkl  (+29 more)
scripts/: build_recipe_features.py  build_user_features.py  clean_data.py  cluster_recipes.py  deploy_recipe_model.py  download_kaggle_data.py  download_models.py  run_nutrition_pipeline.py  run_recipe_pipeline.py  run_user_pipeline.py  setup_cicd.sh  upload_models_to_hf.py  verify_cicd_setup.py
src/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_data_cache.py  test_data_loader.py
(+55 files in other folders)
