[project]
name = "recipe-ml"
version = "1.0.0"
description = "Machine learning pipeline for recipe time prediction and nutritional value tagging"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    "textstat>=0.7.0",
    "wordcloud>=1.9.0",
    "python-dateutil>=2.8.0",
    "hdbscan>=0.8.33",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.12.0",
    "pytest>=7.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[project.scripts]
recipe-time-prediction = "main_time_prediction:main"
recipe-nutrition-tagging = "main_nutrition_tagging:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
